[package]
name = "edid"
version = "0.1.1"
description = "Parse EDID data structures"
homepage = "https://github.com/emersion/rust-edid"
repository = "https://github.com/emersion/rust-edid"
documentation = "https://docs.rs/edid"
readme = "README.md"
categories = ["parser-implementations"]
license = "MIT"
authors = ["emersion"]

[dependencies]
nom = "3.2.0"
