[package]
name = "edid"
version = "0.3.0"
description = "Parse EDID data structures"
homepage = "https://github.com/emersion/rust-edid"
repository = "https://github.com/emersion/rust-edid"
documentation = "https://docs.rs/edid"
readme = "README.md"
categories = ["parser-implementations"]
license = "MIT"
authors = ["emersion"]

[dependencies]

[dependencies.nom]
version = "3.2.0"
features = ["verbose-errors"]
